# DevOps

Rust_leetcode/Add Two Numbers/: Cargo.toml
Rust_leetcode/Add Two Numbers/src/: main.rs
dopzadanie/: Dockerfile-alpine-wine32  Dockerfile-ubuntu-wine
dopzadanie/wpfprjct/wpf/: wpf.sln
dopzadanie/wpfprjct/wpf/wpf/: MainWindow.xaml  MainWindow.xaml.cs  Window1.xaml  Window1.xaml.cs  wpf.csproj
dopzadanie/wpfprjct/wpf/wpf/Properties/: AssemblyInfo.cs  Resources.Designer.cs
pr4/rust_airport_api/: .env
pr4/rust_airport_api/src/: connection.rs  main.rs  schema.rs
pr5/rust_api/: .env  Dockerfile  docker-compose.yml
pr5/time-app-praktika/frontend/: package-lock.json
pr6/javacalc/: Dockerfile
pr6/papochka/: Dockerfile
pr7/ngnix/site/: index.html
pr7/volume/: index.html
rust_airport_api/: .env  Cargo.toml  Dockerfile  commands.txt  docker-compose.yml
rust_airport_api/src/: model_actions.rs  models.rs
