[package]
name = "airport_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
log = "0.4.20"
env_logger = "0.10.0"
colored = "2.0.4"
serde = { version = "1.0.188", features = ["derive"] }
utoipa = { version = "3.5.0", features = ["chrono", "actix_extras"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }
chrono = "0.4.31"
bigdecimal = "0.4"